Update the animate

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <script src="_content/Blazorise.Animate/blazorise.animate.js?v=1.4.2.0"></script>
     <div id="app">
         <svg class="loading-progress">
             <circle r="40%" cx="50%" cy="50%" />
